--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
    build:
      docker:
-       - image: circleci/Python:3.6.5
+       - image: circleci/python:3.6.5
      steps:
        - checkout
        - run: python helloWorld.py
